Tradução do index para inglês

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <div id="textos">
             <h2>Sobre Anna Bella</h2>
-            <p>Anna Bella é uma modelo que personifica elegância, confiança e uma beleza atemporal.Com traços marcantes e uma presença cativante, ela irradia uma aura de sofisticação que transcende as tendências passageiras.Seu olhar hipnotizante capta a imaginação daqueles que têm o privilégio de observá-la em ação.</p>
-            <p>Com uma altura impressionante e uma postura impecável, Anna Bella domina a passarela com graciosidade e determinação. Sua capacidade de se adaptar a uma ampla variedade de estilos e conceitos a torna uma escolha altamente requisitada para desfiles de alta moda, editoriais de revistas e campanhas publicitárias de renome. Ela não apenas veste roupas; ela as transforma em peças de arte vivas, transmitindo a mensagem do estilista com uma autenticidade inigualável.</p>
+            <p>Anna Bella is a model who embodies elegance, confidence and timeless beauty. With striking features and a captivating presence, she radiates an aura of sophistication that transcends passing trends. Her mesmerizing gaze captures the imagination of those who have the peculiarity to observe her in action.</p>
+            <p>With an impressive height and impeccable posture, Anna Bella dominates the catwalk with grace and determination. Its ability to adapt to a wide variety of styles and concepts makes it a highly sought-after choice for high fashion shows, magazine editorials and high-profile advertising campaigns. She doesn't just wear clothes; she transforms them into living pieces of art, conveying the designer's message with unparalleled authenticity.</p>
         </div>
 
         <div id="copyright">
